--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -139,6 +139,102 @@ jobs:
           # npm ci
           DEBUG=* npm run db-setup:build -- --pr=$BUILD_ID
 
+  # Build the API image
+  buildAPI:
+    name: Build API Image
+    runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
+    env:
+      BUILD_ID: ${{ github.event.number }}
+    needs:
+      - scaleDownPods
+    steps:
+      # Checkout the PR branch
+      - name: Checkout Target Branch
+        uses: actions/checkout@v2
+
+      # Install Node - for `node` and `npm` commands
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      # Cache Node modules
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      # Log in to OpenShift.
+      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
+      - name: Log in to OpenShift
+        run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
+
+      # Build the api image
+      - name: Build API Image
+        working-directory: "./api/.pipeline/"
+        run: |
+          npm install
+          # npm ci
+          DEBUG=* npm run build -- --pr=$BUILD_ID
+
+  # Build the web frontend app image
+  buildAPP:
+    name: Build App Image
+    runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
+    env:
+      BUILD_ID: ${{ github.event.number }}
+    needs:
+      - scaleDownPods
+    steps:
+      # Checkout the PR branch
+      - name: Checkout Target Branch
+        uses: actions/checkout@v2
+
+      # Install Node - for `node` and `npm` commands
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      # Cache Node modules
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      # Log in to OpenShift.
+      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
+      - name: Log in to OpenShift
+        run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
+
+      # Build the app image
+      - name: Build APP Image
+        working-directory: "./app/.pipeline/"
+        run: |
+          npm install
+          # npm ci
+          DEBUG=* npm run build -- --pr=$BUILD_ID
+
   # Deploy Database image
   deployDatabase:
     name: Deploy Database Image
@@ -237,3 +333,101 @@ jobs:
           # npm ci
           DEBUG=* npm run db-setup:deploy -- --pr=$BUILD_ID --env=dev
 
+  # Deploy API image
+  deployAPI:
+    name: Deploy API Image
+    runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
+    env:
+      BUILD_ID: ${{ github.event.number }}
+      BRANCH: ${{ github.base_ref }}
+    needs:
+      - buildAPI
+      - deployDatabase
+    steps:
+      # Checkout the PR branch
+      - name: Checkout Target Branch
+        uses: actions/checkout@v2
+
+      # Install Node - for `node` and `npm` commands
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      # Cache Node modules
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      # Log in to OpenShift.
+      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
+      - name: Log in to OpenShift
+        run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
+
+      # Deploy the api image
+      - name: Deploy API Image
+        working-directory: "./api/.pipeline/"
+        run: |
+          npm install
+          # npm ci
+          DEBUG=* npm run deploy -- --pr=$BUILD_ID --env=dev
+
+  # Deploy App image
+  deployAPP:
+    name: Deploy App Image
+    runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
+    env:
+      BUILD_ID: ${{ github.event.number }}
+      BRANCH: ${{ github.base_ref }}
+    needs:
+      - buildAPP
+    steps:
+      # Checkout the PR branch
+      - name: Checkout Target Branch
+        uses: actions/checkout@v2
+
+      # Install Node - for `node` and `npm` commands
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      # Cache Node modules
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      # Log in to OpenShift.
+      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
+      - name: Log in to OpenShift
+        run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
+
+      # Deploy the app image
+      - name: Deploy App Image
+        working-directory: "./app/.pipeline"
+        run: |
+          npm install
+          # npm ci
+          DEBUG=* npm run deploy -- --pr=$BUILD_ID --env=dev
