--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,8 +56,12 @@ services:
       - KEYCLOAK_HOST=${KEYCLOAK_HOST}
       - KEYCLOAK_REALM=${KEYCLOAK_REALM}
       - KEYCLOAK_CLIENT_ID=${KEYCLOAK_CLIENT_ID}
+      - KEYCLOAK_INTEGRATION_ID=${KEYCLOAK_INTEGRATION_ID}
+      - KEYCLOAK_ENVIRONMENT=${KEYCLOAK_ENVIRONMENT}
+      - KEYCLOAK_ADMIN_HOST=${KEYCLOAK_ADMIN_HOST}
       - KEYCLOAK_ADMIN_USERNAME=${KEYCLOAK_ADMIN_USERNAME}
       - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD}
+      - KEYCLOAK_API_HOST=${KEYCLOAK_API_HOST}
       - OBJECT_STORE_URL=${OBJECT_STORE_URL}
       - OBJECT_STORE_ACCESS_KEY_ID=${OBJECT_STORE_ACCESS_KEY_ID}
       - OBJECT_STORE_SECRET_KEY_ID=${OBJECT_STORE_SECRET_KEY_ID}
