--- a/app/package.json
+++ b/app/package.json
@@ -8,13 +8,13 @@
     "url": "https://github.com/bcgov/biohubbc-platform.git"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "deploy_start": "node server",
-    "test": "react-scripts test --ci --watchAll=false --runInBand",
-    "test:watch": "react-scripts test",
-    "coverage": "react-scripts test --ci --coverage --testResultsProcessor jest-sonar-reporter --watchAll=false --runInBand",
-    "update-snapshots": "react-scripts test --ci --watchAll=false --updateSnapshot",
+    "test": "react-app-rewired test --ci --watchAll=false --runInBand",
+    "test:watch": "react-app-rewired test",
+    "coverage": "react-app-rewired test --ci --coverage --testResultsProcessor jest-sonar-reporter --watchAll=false --runInBand",
+    "update-snapshots": "react-app-rewired test --ci --watchAll=false --updateSnapshot",
     "lint": "eslint src/ --ext .jsx,.js,.ts,.tsx",
     "lint-fix": "npm run lint -- --fix",
     "format": "prettier --check \"./src/**/*.{js,jsx,ts,tsx,css,scss}\"",
@@ -23,9 +23,6 @@
   "engines": {
     "node": ">= 14.0.0",
     "npm": ">= 6.0.0"
-  },
-  "browser": {
-    "fs": false
   },
   "dependencies": {
     "@bcgov/bc-sans": "~1.0.1",
@@ -45,11 +42,14 @@
     "@turf/boolean-equal": "~6.3.0",
     "@turf/intersect": "~6.3.0",
     "@turf/simplify": "^6.5.0",
+    "assert": "^2.0.0",
     "axios": "~0.21.4",
     "buffer": "^6.0.3",
     "clsx": "~1.1.1",
     "express": "~4.17.1",
     "formik": "~2.2.6",
+    "fs-constants": "^1.0.0",
+    "fs-extra": "^10.1.0",
     "handlebars": "^4.7.7",
     "jszip": "^3.10.1",
     "keycloak-js": "^19.0.1",
@@ -61,6 +61,7 @@
     "lodash-es": "~4.17.21",
     "moment": "~2.29.2",
     "node-sass": "~4.14.1",
+    "path-browserify": "^1.0.1",
     "pug": "^3.0.2",
     "qs": "~6.9.4",
     "react": "^17.0.2",
@@ -74,6 +75,7 @@
     "reproj-helper": "~1.2.8",
     "shapefile": "^0.6.6",
     "shpjs": "^3.6.3",
+    "stream-browserify": "^3.0.0",
     "typescript": "~4.1.6",
     "uuid": "~8.3.2",
     "yup": "~0.32.9"
@@ -113,6 +115,7 @@
     "jest-sonar-reporter": "~2.0.0",
     "prettier": "~2.7.1",
     "prettier-plugin-organize-imports": "~3.1.0",
+    "react-app-rewired": "~2.2.1",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
