--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,7 @@
     "axios": "~0.21.4",
     "buffer": "^6.0.3",
     "clsx": "~1.1.1",
+    "dompurify": "^2.4.0",
     "express": "~4.17.1",
     "formik": "~2.2.6",
     "fs-constants": "^1.0.0",
@@ -85,6 +86,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "~12.6.0",
+    "@types/dompurify": "^2.3.4",
     "@types/geojson": "~7946.0.7",
     "@types/jest": "~28.1.7",
     "@types/leaflet": "^1.7.11",
