--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "deploy_start": "node server",
-    "test": "react-app-rewired test --ci --watchAll=false --runInBand",
-    "test:watch": "react-app-rewired test",
+    "test": "react-scripts test --ci --watchAll=false --runInBand",
+    "test:watch": "react-scripts test",
     "coverage": "react-app-rewired test --ci --coverage --testResultsProcessor jest-sonar-reporter --watchAll=false --runInBand",
     "update-snapshots": "react-app-rewired test --ci --watchAll=false --updateSnapshot",
     "lint": "eslint src/ --ext .jsx,.js,.ts,.tsx",
