--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,7 @@
     "deploy_start": "node server",
     "test": "react-scripts test --ci --watchAll=false --runInBand",
     "test:watch": "react-scripts test",
-    "coverage": "react-app-rewired test --ci --coverage --testResultsProcessor jest-sonar-reporter --watchAll=false --runInBand",
+    "coverage": "react-scripts test --ci --coverage --testResultsProcessor jest-sonar-reporter --watchAll=false --runInBand",
     "update-snapshots": "react-app-rewired test --ci --watchAll=false --updateSnapshot",
     "lint": "eslint src/ --ext .jsx,.js,.ts,.tsx",
     "lint-fix": "npm run lint -- --fix",
