--- a/.github/workflows/addComments.yml
+++ b/.github/workflows/addComments.yml
@@ -3,12 +3,13 @@ name: Add Comments
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, ready_for_review]
 
 jobs:
   addOpenshiftURLComment:
     name: Add Openshift URL Comment
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
       - name: Add Comment
         uses: peter-evans/create-or-update-comment@v2
