--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,6 @@ jobs:
           echo Git Event Name: ${{ github.event_name }}
           echo Git Event Action: ${{ github.event.action }}
           echo Git Branch Ref: ${{ github.head_ref }}
-          echo Git Labels: "$LABELS"
           echo PR in Draft: ${{ github.event.pull_request.draft }}
 
   # Scans the commit against past commits, and determines if any jobs are skippable (due to no changes in target files).
@@ -41,8 +40,10 @@ jobs:
     needs:
       - checkEnv
     outputs:
-      should_skip: ${{ steps.skip_check.outputs.should_skip }}
       paths_result: ${{ steps.skip_check.outputs.paths_result }}
+      # Set to `true` if the latest commit message contains `ignore-skip` anywhere in the message.
+      # Used to disable duplicate action skipping, if needed.
+      ignore_skip: ${{ contains(steps.head_commit_message.outputs.commit_message, 'ignore-skip') }}
     steps:
       - id: skip_check
         uses: fkirc/skip-duplicate-actions@v5
@@ -78,6 +79,18 @@ jobs:
               paths_ignore:
                 - 'database/src/**/*.test.ts'
                 - 'database/**.md'
+
+      # Get the head commit for this pull request, parse out the commit message, and assign to the `commit_message`
+      # output variable, which is then used to determine if the term `ignore-skip` is found in the commit message.
+      - name: Checkout head commit
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: Get head commit message
+        id: head_commit_message
+        run: |
+          echo commit message: $(git show -s --format=%s)
+          echo "commit_message=$(git show -s --format=%s)" >> $GITHUB_OUTPUT
 
   # Checkout the repo once and cache it for use in subsequent jobs
   checkoutRepo:
@@ -118,10 +131,11 @@ jobs:
     name: Build APP Image
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    if: |
-      github.event.pull_request.merged == false && 
-      github.event.pull_request.draft == false && 
-      !(fromJSON(needs.skipDuplicateActions.outputs.paths_result).app.should_skip && fromJSON(needs.skipDuplicateActions.outputs.paths_result).app.skipped_by.branch == github.head_ref)
+    if: ${{ github.event.pull_request.merged == false &&
+      github.event.pull_request.draft == false &&
+      ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).app.should_skip == false ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).app.skipped_by.branch != github.head_ref ) }}
     env:
       PR_NUMBER: ${{ github.event.number }}
       APP_NAME: "biohub-platform-app"
@@ -179,10 +193,11 @@ jobs:
     name: Build Database Image
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    if: |
-      github.event.pull_request.merged == false && 
-      github.event.pull_request.draft == false && 
-      !(fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.should_skip && fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.skipped_by.branch == github.head_ref)
+    if: ${{ github.event.pull_request.merged == false &&
+      github.event.pull_request.draft == false &&
+      ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.should_skip == false ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.skipped_by.branch != github.head_ref ) }}
     env:
       PR_NUMBER: ${{ github.event.number }}
       APP_NAME: "biohub-platform-db"
@@ -240,10 +255,11 @@ jobs:
     name: Build Database Setup Image
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    if: |
-      github.event.pull_request.merged == false && 
-      github.event.pull_request.draft == false && 
-      !(fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.should_skip && fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.skipped_by.branch == github.head_ref)
+    if: ${{ github.event.pull_request.merged == false &&
+      github.event.pull_request.draft == false &&
+      ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.should_skip == false ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.skipped_by.branch != github.head_ref ) }}
     env:
       PR_NUMBER: ${{ github.event.number }}
     needs:
@@ -294,10 +310,11 @@ jobs:
     name: Build API Image
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    if: |
-      github.event.pull_request.merged == false && 
-      github.event.pull_request.draft == false && 
-      !(fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.should_skip && fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.skipped_by.branch == github.head_ref)
+    if: ${{ github.event.pull_request.merged == false &&
+      github.event.pull_request.draft == false &&
+      ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.should_skip == false ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.skipped_by.branch != github.head_ref ) }}
     env:
       PR_NUMBER: ${{ github.event.number }}
       APP_NAME: "biohub-platform-api"
@@ -355,10 +372,11 @@ jobs:
     name: Build Queue Image
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    if: |
-      github.event.pull_request.merged == false && 
-      github.event.pull_request.draft == false && 
-      !(fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.should_skip && fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.skipped_by.branch == github.head_ref)
+    if: ${{ github.event.pull_request.merged == false &&
+      github.event.pull_request.draft == false &&
+      ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.should_skip == false ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.skipped_by.branch != github.head_ref ) }}
     env:
       PR_NUMBER: ${{ github.event.number }}
       APP_NAME: "biohub-platform-api"
@@ -397,7 +415,7 @@ jobs:
       # Why? The new pods will be deployed before the existing pods are terminated, and twice the resources will be needed
       # in that moment. If not enough resources are available to spin up the new pods, then they may fail to deploy.
       - name: Scale down api pods
-        run: oc get deploymentconfig --namespace af2668-dev --selector env-id=$PR_NUMBER,app-name=$APP_NAME -o name | awk '{print "oc scale --replicas=0 " $1}' | bash
+        run: oc get deploymentconfig --namespace a0ec71-dev --selector env-id=$PR_NUMBER,app-name=$APP_NAME -o name | awk '{print "oc scale --replicas=0 " $1}' | bash
 
       # Install api pipeline node modules
       # Note: This already caches node modules internally
@@ -416,10 +434,11 @@ jobs:
     name: Deploy APP Image
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    if: |
-      github.event.pull_request.merged == false && 
-      github.event.pull_request.draft == false && 
-      !(fromJSON(needs.skipDuplicateActions.outputs.paths_result).app.should_skip && fromJSON(needs.skipDuplicateActions.outputs.paths_result).app.skipped_by.branch == github.head_ref)
+    if: ${{ github.event.pull_request.merged == false &&
+      github.event.pull_request.draft == false &&
+      ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).app.should_skip == false ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).app.skipped_by.branch != github.head_ref ) }}
     env:
       PR_NUMBER: ${{ github.event.number }}
     needs:
@@ -469,10 +488,11 @@ jobs:
     name: Deploy Database Image
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    if: |
-      github.event.pull_request.merged == false && 
-      github.event.pull_request.draft == false && 
-      !(fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.should_skip && fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.skipped_by.branch == github.head_ref)
+    if: ${{ github.event.pull_request.merged == false &&
+      github.event.pull_request.draft == false &&
+      ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.should_skip == false ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.skipped_by.branch != github.head_ref ) }}
     env:
       PR_NUMBER: ${{ github.event.number }}
     needs:
@@ -522,10 +542,11 @@ jobs:
     name: Deploy Database Setup Image
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    if: |
-      github.event.pull_request.merged == false && 
-      github.event.pull_request.draft == false && 
-      !(fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.should_skip && fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.skipped_by.branch == github.head_ref)
+    if: ${{ github.event.pull_request.merged == false &&
+      github.event.pull_request.draft == false &&
+      ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.should_skip == false ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).database.skipped_by.branch != github.head_ref ) }}
     env:
       PR_NUMBER: ${{ github.event.number }}
     needs:
@@ -576,12 +597,13 @@ jobs:
     name: Deploy API Image
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    if: |
-      always() &&
-      (needs.deployDatabase.result == 'success' || needs.deployDatabase.result == 'skipped') &&
-      github.event.pull_request.merged == false && 
-      github.event.pull_request.draft == false && 
-      !(fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.should_skip && fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.skipped_by.branch == github.head_ref)
+    if: ${{ always() &&
+      ( needs.deployDatabase.result == 'success' || needs.deployDatabase.result == 'skipped' ) &&
+      github.event.pull_request.merged == false &&
+      github.event.pull_request.draft == false &&
+      ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.should_skip == false ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.skipped_by.branch != github.head_ref ) }}
     env:
       PR_NUMBER: ${{ github.event.number }}
     needs:
@@ -632,12 +654,13 @@ jobs:
     name: Deploy Queue Image
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    if: |
-      always() &&
-      (needs.deployDatabase.result == 'success' || needs.deployDatabase.result == 'skipped') &&
-      github.event.pull_request.merged == false && 
-      github.event.pull_request.draft == false && 
-      !(fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.should_skip && fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.skipped_by.branch == github.head_ref)
+    if: ${{ always() &&
+      ( needs.deployDatabase.result == 'success' || needs.deployDatabase.result == 'skipped' ) &&
+      github.event.pull_request.merged == false &&
+      github.event.pull_request.draft == false &&
+      ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.should_skip == false ||
+      fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.skipped_by.branch != github.head_ref ) }}
     env:
       PR_NUMBER: ${{ github.event.number }}
     needs:
@@ -739,4 +762,3 @@ jobs:
         run: |
           echo One or more deployments failed or was cancelled
           exit 1
-
