--- a/api/package.json
+++ b/api/package.json
@@ -38,8 +38,8 @@
     "db-migrate-pg": "~1.2.2",
     "express": "~4.17.1",
     "express-openapi": "~9.3.0",
-    "fastq": "^1.15.0",
     "fast-xml-parser": "^4.0.8",
+    "fastq": "^1.15.0",
     "jsonpath": "~1.1.1",
     "jsonwebtoken": "~8.5.1",
     "jwks-rsa": "~2.0.5",
@@ -59,7 +59,8 @@
     "typescript": "~4.2.4",
     "uuid": "~8.3.2",
     "winston": "~3.3.3",
-    "xlsx": "~0.17.0"
+    "xlsx": "~0.17.0",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "~1.0.1",
