--- a/api/package.json
+++ b/api/package.json
@@ -55,6 +55,7 @@
     "qs": "~6.10.1",
     "rxjs": "~7.8.0",
     "sql-template-strings": "~2.2.2",
+    "stringify-object": "^5.0.0",
     "swagger-ui-express": "~4.3.0",
     "typescript": "~4.2.4",
     "uuid": "~8.3.2",
@@ -79,6 +80,7 @@
     "@types/pg": "~8.6.1",
     "@types/sinon": "~10.0.4",
     "@types/sinon-chai": "~3.2.5",
+    "@types/stringify-object": "^4.0.2",
     "@types/swagger-ui-express": "~4.1.3",
     "@types/uuid": "~8.3.1",
     "@types/yamljs": "~0.2.31",
